<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StudRead</string>
    <string name="credit">Credit</string>
    <string name="action_settings">Settings</string>
    <string name="place_on_card">Place your student id card or your Mensa card on the back of your phone.</string>
    <string name="licenseInfo">This application is Open Source and licensed under GPL3. You can find the sources on
        GitHub below.
    </string>
    <string name="darkMode" translatable="false">DarkMode</string>
    <string name="autostart">Start automatically</string>
    <string name="farebot">farebot</string>
    <string name="github_link" translatable="false">https://github.com/MobileMarci/StudentIDCredit</string>
    <string name="nfc_off">NFC is off</string>
    <string name="turn_nfc_on">Please turn on NFC</string>
    <string name="goto_settings">go to settings</string>
    <string name="last_withdrawal">Last withdrawal:</string>
    <string name="card_not_supported">Card not supported</string>
    <string name="communication_fail">Communication with Card failed</string>
    <string name="version">Version</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="title_activity_about">About</string>
    <string name="about_rights_reserved">All rights reserved</string>
    <string name="about_copyright">©2019 Marcel Knupfer</string>
    <string name="about_visit">Visit me on:</string>
    <string name="twitter">Twitter</string>
    <string name="googlePlay">Google Play</string>
    <string name="website_link">https://marcelknupfer.de/apps/</string>
    <string name="twitter_link">https://twitter.com/MobileMarci</string>
    <string name="google_play_link">https://play.google.com/store/apps/developer?id=MobileMarci</string>
    <string name="website">Web</string>
    <string name="title_activity_about2">AboutActivity2</string>
    <string name="title_activity_licenses">LicensesActivity</string>
    <string name="licenses">Third Party Licenses</string>
    <string name="licenceText">This application is licensed under GPL3 and the source code is available on GitHub
    </string>
    <string name="github_button">Github</string>
    <string name="license_introduction">This list contains all the Open Source projects and third party software
        used to build the application.
    </string>
    <string name="mensaguthaben_link">https://github.com/jakobwenzel/MensaGuthaben</string>
    <string name="license">License:</string>
    <string name="farebot_link">https://github.com/codebutler/farebot</string>
    <string name="studentid">Student ID</string>
    <string name="Current">Current Credit:</string>
    <string name="withdrawal">Last withdrawal:</string>
    <string name="title_activity_settings">Settings</string>
    <string name="preference_key" translatable="false">149274843</string>
    <string name="preference_autostart_key" translatable="false">856729fdkjfhdsjhg</string>
    <string name="preference_darkmode_key" translatable="false">fhhidgfidgf47hgfjhhgdh</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="autostart_explanation">Automatically start the app when touching the back of your phone with a
        compatible nfc card.
    </string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>
    <string name="action_fullscreen_main" translatable="false">de.marcelknupfer.studentenausweisguthaben.Fullscreen</string>
    <string name="extra_value_main" translatable="false">valueData</string>
</resources>
