<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AboutActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:elevation="8dp">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/about_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:paddingEnd="16dp"
                app:titleTextColor="@color/white"
                android:background="@color/colorPrimary"
                android:paddingStart="6dp"
                app:contentInsetStartWithNavigation="0dp"
                app:navigationIcon="@drawable/ic_arrow_back24dp"/>

    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:fillViewport="true">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                            android:src="@mipmap/ic_launcher"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/imageView4"
                            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginEnd="8dp"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView" android:layout_marginTop="8dp"
                            app:layout_constraintTop_toBottomOf="@+id/imageView4"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginStart="8dp" android:text="@string/app_name"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"/>
                    <TextView
                            android:text="Version"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/versionTextAboutLayout" android:layout_marginTop="8dp"
                            app:layout_constraintTop_toBottomOf="@+id/textView"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginStart="8dp"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"/>
                    <TextView
                            android:text="@string/about_copyright"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView4" android:layout_marginTop="16dp"
                            app:layout_constraintTop_toBottomOf="@+id/versionTextAboutLayout"
                            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"/>
                    <TextView
                            android:text="@string/about_visit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView6"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginStart="8dp"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/license_button"/>
                    <Button
                            android:text="@string/website"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/web_button"
                            app:layout_constraintTop_toBottomOf="@+id/textView6"
                            app:layout_constraintEnd_toEndOf="@+id/google_play_button"
                            android:layout_marginTop="8dp" app:icon="@drawable/ic_internet"
                            app:layout_constraintStart_toStartOf="@+id/google_play_button"
                    />
                    <Button
                            android:text="@string/twitter"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/twitter_button" android:layout_marginTop="8dp"
                            app:layout_constraintTop_toBottomOf="@+id/web_button"
                            app:layout_constraintEnd_toEndOf="@+id/google_play_button"
                            app:layout_constraintStart_toStartOf="@+id/google_play_button"
                            app:icon="@drawable/ic_share_black_24dp"
                            />
                    <Button
                            android:text="@string/googlePlay"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/google_play_button" android:layout_marginTop="8dp"
                            app:layout_constraintTop_toBottomOf="@+id/twitter_button"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginEnd="8dp" app:icon="@drawable/ic_play_arrow_black_24dp"
                            />
                    <Button
                            android:text="@string/licenses"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/license_button"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginEnd="8dp"
                            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                            style="@style/Widget.MaterialComponents.Button.TextButton"
                            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/licenceText"/>
                    <TextView
                            android:text="TextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/licenceText"
                            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView4"
                            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
                    <Button
                            android:text="@string/github_button"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/github_button"
                            android:layout_marginTop="8dp"
                            app:layout_constraintTop_toBottomOf="@+id/google_play_button"
                            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/google_play_button"
                            app:layout_constraintStart_toStartOf="@+id/google_play_button"/>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>