<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:layout_marginTop="?android:attr/actionBarSize">

    <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            app:cardCornerRadius="20dp"
            app:cardElevation="16dp"
            app:cardBackgroundColor="@color/card_background"
            android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:id="@+id/cardView"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_marginLeft="8dp" android:layout_marginRight="8dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView5" android:text="@string/studentid"
                    android:typeface="normal"
                    android:textStyle="bold" android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
                    android:textColor="@color/white"/>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/ic_chip"
                    android:id="@+id/imageView2"
                    android:layout_marginTop="40dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView5"
                    android:layout_marginBottom="40dp" app:layout_constraintBottom_toTopOf="@+id/textView11"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"/>
            <TextView
                    android:text="@string/Current"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/credit_tv"
                    app:layout_constraintTop_toTopOf="@+id/textView5"
                    android:layout_marginEnd="8dp" app:layout_constraintBottom_toBottomOf="@+id/textView5"
                    app:layout_constraintVertical_bias="0.421" app:layout_constraintEnd_toStartOf="@+id/current"
                    android:textColor="@color/white" android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"/>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/ic_person_black_24dp"
                    android:id="@+id/imageView3"
                    android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/credit_tv"
                    app:layout_constraintStart_toEndOf="@+id/imageView2" android:layout_marginStart="200dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                    android:layout_marginBottom="40dp" app:layout_constraintBottom_toTopOf="@+id/textView11"/>
            <TextView
                    android:text="@string/withdrawal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView11" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/current" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toTopOf="@+id/credit_tv"
                    app:layout_constraintBottom_toBottomOf="@+id/credit_tv" android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"/>
            <TextView
                    android:text="2.95€"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/last"
                    app:layout_constraintTop_toTopOf="@+id/textView11"
                    app:layout_constraintBottom_toBottomOf="@+id/textView11"
                    app:layout_constraintStart_toEndOf="@+id/textView11" android:layout_marginStart="8dp"
                    android:textColor="@color/colorAccent" android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <TextView
            android:text="@string/place_on_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textStyle="bold" android:textAlignment="center"
            android:padding="16dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/cardView"/>
</androidx.constraintlayout.widget.ConstraintLayout>